--- a/page5.html
+++ b/page5.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2o" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2o" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -83,7 +83,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="vNuk+pZln3F+qHxJ5RL0ZjS3ciX1CdUGw5zWgDnnLiqT9K4RAyBndGIN2Bzfo3lRkuErhiENQprwjjgJY/yy9wBsHLfegUrlS8bg82yWBj4VYmLsqh8tnlPyt1F2Eio4" data-form-email="true">
+                        <input type="hidden" value="e/4Y0KFCELLKGpnyMPbKgvZZfG3jXVYMPGSaC1ji4bGBAbVXSilMuz0XoIewmzzzxZ/iLOwpiy+SxGry93iUAzeJ7Eovnawel5F1+CVSyiCeJaQNWk2xxZZFEoz02bqE" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -247,6 +247,73 @@
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
                 <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="form1-2r" style="background-image: url(assets/images/mbr-2000x25000.jpg); padding-top: 120px; padding-bottom: 120px;">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
+    </div>
+    <div class="mbr-section mbr-section__container mbr-section__container--middle">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-xs-center">
+                    <h3 class="mbr-section-title display-2">CONTACT FORM</h3>
+                    <small class="mbr-section-subtitle">Come slay some giants with us!&nbsp;</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-section mbr-section-nopadding">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
+
+
+                    <div data-form-alert="true">
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
+                    </div>
+
+
+                    <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
+
+                        <input type="hidden" value="M90u4ry/uqm0Zn3jZo9P/7kQdrrjWAdi0wAHg3Ha4UMIRGViZP40+ueGN6CGXNhhoC/xzAdiUseaxPqGcj7dfOO5rxc+ua6mVL20CK45dQApQ6jFLk71Md4bRZKyYwhX" data-form-email="true">
+
+                        <div class="row row-sm-offset">
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2r-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2r-name">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2r-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2r-email">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2r-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2r-phone">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <label class="form-control-label" for="form1-2r-message"></label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2r-message"></textarea>
+                        </div>
+
+                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
+
+                    </form>
+                </div>
             </div>
         </div>
     </div>
