--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2n" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2q" style="background-image: url(assets/images/mbr-2000x25000.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -83,36 +83,36 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="jwyGcKD8Ev4KhXzDrbn/kmSReiUDgedvib0S0Td4iTohboARDbPVbwXfoUHGErYCDRvXmwgm+75as/7v5vGjMfjLMpS+TnPZTWfR+4b+nCLDd/Y3x0gs+vSZIyQIokRH" data-form-email="true">
+                        <input type="hidden" value="CKeyLKJYzBuXgav0DUUTTgjZ4c5LBoILMt24Ch/1YMufu5xfD52A709yePvgsBWPDDFCF7WN4MvE53yTeE/ClFB9vMr4GZpmmLVxwcGGcG9drw5mLj0DjpNrq1HJullq" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2n-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2n-name">
+                                    <label class="form-control-label" for="form1-2q-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2q-name">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2n-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2n-email">
+                                    <label class="form-control-label" for="form1-2q-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2q-email">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2n-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2n-phone">
+                                    <label class="form-control-label" for="form1-2q-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2q-phone">
                                 </div>
                             </div>
 
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-2n-message"></label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2n-message"></textarea>
+                            <label class="form-control-label" for="form1-2q-message"></label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2q-message"></textarea>
                         </div>
 
                         <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
